--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
