--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -21,6 +22,7 @@
     <script src="cordova.js"></script>
     <!-- hardcoded routine for now -->
     <script src="js/bwf-recomended-routine.js"></script>
+    <script src="js/settings.js"></script>
 
     <script src="lib/angular-timer/dist/angular-timer.js"></script>
     <script src="lib/humanize-duration/humanize-duration.js"></script>
@@ -37,7 +39,7 @@
 <!--
   The nav bar that will be updated as we navigate between views.
 -->
-<ion-nav-bar class="bar-stable">
+<ion-nav-bar class="bar-positive">
     <ion-nav-back-button>
     </ion-nav-back-button>
 </ion-nav-bar>
