--- a/www/index.html
+++ b/www/index.html
@@ -49,5 +49,8 @@
   have templates inline in this html file if you'd like).
 -->
 <ion-nav-view></ion-nav-view>
+
+<audio id="timerEnd" src="sounds/BoxingBell.mp3"></audio>
+
 </body>
 </html>
