--- a/www/index.html
+++ b/www/index.html
@@ -40,15 +40,17 @@
   The nav bar that will be updated as we navigate between views.
 -->
 <ion-nav-bar class="bar-positive">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
+    <ion-nav-buttons side="left">
+        <button ng-if="showCustomBack" ng-click="$root.goBack()" class="button button-clear"><i
+                class="icon ion-chevron-left"></i></button>
+    </ion-nav-buttons>
 </ion-nav-bar>
 <!--
   The views will be rendered in the <ion-nav-view> directive below
   Templates are in the /templates folder (but you could also
   have templates inline in this html file if you'd like).
 -->
-<ion-nav-view></ion-nav-view>
+<ion-nav-view animation="slide-left-right"></ion-nav-view>
 
 <audio id="timerEnd" src="sounds/BoxingBell.mp3"></audio>
 
